tests/machine/x/cpp/str_builtin.mochi.error
line 13: ../../../tests/machine/x/cpp/str_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/str_builtin.mochi.cpp:13:11: error: ‘str’ was not declared in this scope; did you mean ‘std’?
   13 |     print(str(123));
      |           ^~~
      |           std

 12 | int main() {
 13 |     print(str(123));
 14 |     return 0;
